Fix various alignment issues

--- a/src/scss/wordpress/_alignment.scss
+++ b/src/scss/wordpress/_alignment.scss
@@ -47,3 +47,23 @@
     text-align: right;
   }
 }
+
+figcaption {
+  text-align: initial;
+
+  .alignfull & {
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 1em;
+    padding-right: 1em;
+    text-align: center;
+  }
+
+  @if $is-frontend == false {
+    [data-align='full'] & {
+      margin-left: auto;
+      margin-right: auto;
+      text-align: center;
+    }
+  }
+}
