--- a/src/scss/wordpress/_buttons.scss
+++ b/src/scss/wordpress/_buttons.scss
@@ -2,7 +2,7 @@
 .wp-block-buttons .wp-block-button {
   display: inline-block;
   margin-right: 1em;
-  margin-bottom: 1em;
+  margin-bottom: 1.5em;
 
   &:last-child {
     margin-right: 0;
