--- a/src/scss/wordpress/_gallery.scss
+++ b/src/scss/wordpress/_gallery.scss
@@ -142,3 +142,7 @@
 .wp-block-gallery {
   margin-bottom: 1.5em;
 }
+
+.blocks-gallery-grid {
+  margin-bottom: 0;
+}
