--- a/src/scss/wordpress/_image.scss
+++ b/src/scss/wordpress/_image.scss
@@ -1,7 +1,7 @@
 .wp-block-image {
   // The image block is in a `figure` element, and many themes zero this out.
   // This rule explicitly sets it, to ensure at least some bottom-margin in the flow.
-  margin-bottom: 1em;
+  margin-bottom: 1.5em;
 
   // img {
   //   max-width: 100%;
